# nihon-cli

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  TESTING.md  entwicklungskonzept.md  pyproject.toml  setup.py
.claude/: settings.local.json
pip-wheel-metadata/nihon_cli.dist-info/: METADATA  entry_points.txt  top_level.txt
src/nihon_cli/: __init__.py  app.py  main.py
src/nihon_cli/cli/: __init__.py  commands.py
src/nihon_cli/core/: __init__.py  answer_checker.py  character.py  config.py  excel_parser.py  flash.py  ocr_parser.py  parser.py  quiz.py  quiz_vocab.py  quiz_weekly.py  romaji_converter.py  timer.py  vocabulary.py  weekly_session.py  word.py
src/nihon_cli/data/: __init__.py  hiragana.py  hiragana_advanced.py  hiragana_basic.py  katakana.py  katakana_advanced.py  katakana_basic.py  katakana_flash.py  words.py  words_advanced.py  words_basic.py
src/nihon_cli/infra/: __init__.py  config.py  database.py  migrations.py  repository.py  weekly_session_repository.py
src/nihon_cli/ui/: formatting.py  item_selector.py
tests/: __init__.py  test_cli.py  test_config.py  test_quiz.py  test_timer.py
